--- a/codigo/public/css/styles.css
+++ b/codigo/public/css/styles.css
@@ -163,11 +163,15 @@ body{
 
 .stylecrud form {
     display: grid;
-    grid-template-columns: 80%;
+    grid-template-columns: 50%;
     grid-template-rows: repeat(12, 30px) 50px;
     justify-content: center;
+    align-items: center;
     text-decoration: none;
-    margin-top: 10px;
+    margin: 20px 10% 10% 10%;
+    background-color: rgba(0, 204, 255, 0.75);
+    max-width: 80%;
+    padding: 10px 0 10px 0;
 }
 
 .stylecrud form label {
@@ -176,8 +180,9 @@ body{
     font-family: DejaVu Sans Mono, monospace, Arial, Helvetica, sans-serif;
 }
 
-.stylecrud form input {
+.stylecrud form input{
     text-align: center;
+    max-width: 100%;
 }
 
 .stylecliente {
