--- a/codigo/public/css/styles.css
+++ b/codigo/public/css/styles.css
@@ -97,60 +97,161 @@ body{
     object-fit: cover;
 }
 
-.stylevendas {
+#tres .styleproduto  ul {
+    width: 20%;
+    height: 300px;
+    padding: 0px;
+    margin: 10px 20px 10px 20px;
+    float: left;
+    box-shadow: 0 5px 20px rgb(0, 0, 0, 0.3);
+    display: grid;
+    align-content: flex-end;
+}
+
+#tres .styleproduto  li {
+    text-decoration: none;
+    list-style: none;
+    color:rgb(0, 4, 255);
+}
+
+#tres .styleproduto img {
+    width: 100%;
+    height: 150px;
+    margin: 1px;
+}
+
+#tres .styleproduto  h5 {
+    font-size:20px;
+    color:rgb(0, 0, 0);
+    display: inline;
+    font-family: DejaVu Sans Mono, monospace, Arial, Helvetica, sans-serif;
+}
+
+.stylelista {
     height: 100%;
     width: 100%;
     display: grid;
-    grid-template-rows: 80px 50px 600px;
+    grid-template-rows: 7.5% 7.5% 85%;
     text-decoration: none;
 }
-.stylevendas #um li{
+
+.stylelista #tres{
+    overflow: auto;
+    margin-bottom: 10px;
+}
+
+.stylelista .styleproduto .btnproduto .btn {
+    width: 100%;
+    border-radius: 5px;
+    border-color: rgb(37, 118, 123, 100%);
+    font-size: medium;
+    color: rgb(3, 90, 124);
+}
+
+.stylelista .styleproduto .btnproduto .btn-warning{
+    position:absolute;
+    bottom: 8px;
+    right: 15px;
+    width: 100px;
+    border-radius: 5px;
+    border-color: #ffc107;
+    background-color: #ffc107;
+    color: rgb(0, 0, 0);
+}
+
+.stylelista #um li{
     display: flex;
     align-items:flex-start;
     list-style-type: none;
 }
 
-.stylevendas #um img {
+.stylelista #um img {
     margin-left: 40px;
     object-fit: cover;
 }
 
-.styleprodutos {
-    height: 100%;
-    width: 100%;
-    display: grid;
-    grid-template-rows: 80px 50px 600px;
+.stylelista #dois {
+    position: relative;
+}
+
+.stylelista #dois button{
+    background-color: rgb(37, 118, 123, 100%);
+    position: absolute;
+    margin-right: 17px;
+    right: 0;
+}
+
+.modal .modal-content{
+    border-radius: 10px;
+    border-right: solid 10px rgb(37, 118, 123, 100%);
+    border-left: solid 10px rgb(37, 118, 123, 100%);
+}
+
+.modal .modal-title, .modal .modal-title .styleproduto{
+    color: rgb(37, 118, 123, 100%);
+    font-size: 20px;
+}
+
+.modal .close{
+    color: rgb(248, 11, 11);
+    background-color: black;
+    font-size: 30px;
+    width: 30px;
+    height: 30px;
+}
+
+.modal .modal-content .btn{
+    position:absolute;
+    bottom: 8px;
+    right: 15px;
+}
+
+.modal .modal-content .stylebasic{
+    height: 180px;
+    text-align: left;
+    color: rgb(36, 36, 36);
+    font-size: medium;
+}
+
+.modal .modal-content .stylefornecedor{
+    height: 260px;
+    text-align: left;
+    color: rgb(36, 36, 36);
+    font-size: medium;
+}
+
+.modal .modal-content .styleproduto{
+    height: 550px;
+    text-align: left;
+    color: rgb(36, 36, 36);
+    font-size: medium;
+}
+
+.table{
     text-decoration: none;
+    table-layout:fixed;
+    overflow-y: hidden;
+    max-height: 500px;
+    margin: auto;
+    width: auto;
 }
 
-.styleprodutos #um li{
-    display: flex;
-    align-items:flex-start;
-    list-style-type: none;
-}
-
-.styleprodutos #um img {
-    margin-left: 40px;
-    object-fit: cover;
-}
-
-.styleclientes {
-    height: 100%;
-    width: 100%;
-    display: grid;
-    grid-template-rows: 80px 50px 600px;
+.table a, .table td, .table li{
+    color:rgb(6, 47, 49);
     text-decoration: none;
+    font-size: large;
+    text-align: center;
 }
 
-.styleclientes #um li{
-    display: flex;
-    align-items:flex-start;
-    list-style-type: none;
+.table thead th{
+    text-align: center;
+    font-size: medium;
 }
 
-.styleclientes #um img {
-    margin-left: 40px;
-    object-fit: cover;
+.table a:hover{
+    color:rgb(7, 209, 219);
+    text-decoration: underline;
+    text-shadow: 10px rgb(5, 5, 5);
 }
 
 .stylefornecedor {
@@ -275,19 +376,5 @@ body{
     grid-column-end: 1;
 }
 
-.table{
-    overflow-y: hidden;
-    max-height: 500px;
-    border: 1px solid rgb(0, 0, 0);
-    background:black;
-    color:rgb(0, 204, 255);
-    margin: auto;
-    width: auto;
-}
 
-.button button{
-    display: grid;
-    margin: 1px;
-    width: 99%;
-}
 
